# HUFFMAN

./: CMakeLists.txt  file_huffman.cpp  huffman.cpp  main.cpp
utility/: file_huffman.cpp  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  main.cpp
